--- a/config/dev_config.yml
+++ b/config/dev_config.yml
@@ -2,7 +2,7 @@ inject_layer_number:
   2:
     probability: 1.0
     fault_type: BitFlip
-    elements: all
+    elements: random
   1:
     probability: 1.0
     fault_type: BitFlip
@@ -10,8 +10,8 @@ inject_layer_number:
   3:
     probability: 1.0
     fault_type: BitFlip
-    elements: all
+    elements: random
   4:
     probability: 1.0
     fault_type: BitFlip
-    elements: all
+    elements: random
