--- a/config/dev_config.yml
+++ b/config/dev_config.yml
@@ -1,17 +1,4 @@
-inject_layer_number:
-  2:
-    probability: 1.0
-    fault_type: BitFlip
-    elements: random
-  1:
-    probability: 1.0
-    fault_type: BitFlip
-    elements: all
-  3:
-    probability: 1.0
-    fault_type: BitFlip
-    elements: random
-  4:
-    probability: 1.0
-    fault_type: BitFlip
-    elements: random
+inject_layer:
+  layer_name: "name"
+  fault_type: BitFlip
+  probability: 1.0
